# loki

./: CMakeLists.txt  Makefile  README.md  examples.csv  loki
.cache/clangd/index/: add.cpp.3A76DDAE1440146F.idx  add.cpp.4C4E1C782196DFAD.idx  app.hpp.4DB1FC99635C9C85.idx  app.hpp.4F9F1C5CD8C5AB01.idx  main.cpp.45636ECAC4879A07.idx  main.cpp.FFA9025301A3A43A.idx  manager.cpp.CD5388C89A0FC5DF.idx  manager.hpp.CA3FDF88E6B03CC0.idx
headers/: utils.hpp
source/: app.hpp  main.cpp  utils.cpp
